* Added timestamps to the outputted log files and added the date to the end of file [pyborg-irc.py]
* Added dictionary rebuilding daily to self-optimising function [pyborg.py]
* Added IM interface using a modified irc module and bitlbee [pyborg-im.py & alia-im]
* Fixed all the dictionary related bugs which caused random quits [pyborg.py]
* Added code to strip unknown characters while learning [pyborg.py]
* Removed colour and special character stripping code (didn't work right anyway) [pyborg-irc.py & pyborg-im.py]
* Modified cfg file generation to be closer to alia's default ones [pyborg.py, pyborg-irc.py & pyborg-im.py]
* Redid files to create smaller bot logs when using the bash scripts [pyborg.py, pyborg-irc.py & pyborg-im.py]
* Removed the parts of pyborg we're not using - people who wants the full pyborg can download it.
* Fixed the Zip function in save_all() [pyborg.py]
* Fixed the Zipfile error AGAIN! [pyborg.py]
* Removed saving functions from the interfaces to prevent saving on quit. [pyborg-irc.py & pyborg-im.py]
* Fixed the Zipfile error yet again and removed the *.dat file deletion for a better back up system [pyborg.py]
* Made the response delay effect owners too (except when responding to a command) [pyborg.py]
* Yet more dictionary fixes and an automated way to delete corrupt zipfiles in the save_all function [pyborg.py]
* The last(?) dictionary fix that seems to have removed all errors - FINALLY! [pyborg.py]
* Removed lowercasing of learned data from the code. Should get pretty interesting from here on out [pyborg.py]
* Alia now only changes her own nick to #nick instead of all nicks in the channel [pyborg-irc.py & pyborg-im.py]
* Fixed the the Capitalization bug by actually writing my own routine for it [pyborg.py, pyborg-irc.py & pyborg-im.py]
* Moved the Capitilization code back into the core and made the regex code case-insensitive [pyborg.py, pyborg-irc.py & pyborg-im.py]